# api-v5

./: Cargo.toml  README.md
data/certs/: mongo.pem
src/: main.rs
src/routes/services/auth/: login.rs  mod.rs  register.rs
src/routes/services/auth/login/: mod.rs
src/routes/services/auth/tests/: mod.rs  register.rs
src/tests/: mod.rs
src/tests/routes/: mod.rs
src/tests/routes/services/auth/login/: imaginary_user.rs  invalid_pass.rs  missing_field.rs  mod.rs  success.rs
src/tests/routes/services/auth/register/: dupe_name.rs  missing_fields.rs  mod.rs  success.rs
src/tests/utils/: mod.rs
src/tests/utils/database/: connect_success.rs  init_fail.rs  mod.rs
src/tests/utils/password/: hash.rs  mod.rs  verify.rs
src/utils/: mod.rs  password.rs
src/utils/database/: mod.rs
src/utils/database/user/: mod.rs
